# uml-rs

./: Cargo.toml  LICENSE  README.md
ascii_renderer/: Cargo.toml
crates/applications/desktop-client/: Cargo.toml
crates/applications/desktop-client/src/: infra.rs  main.rs
crates/applications/flutter/: .flutter-plugins-dependencies  pubspec.yaml
crates/applications/flutter/.dart_tool/: package_config.json  package_graph.json
crates/applications/flutter/uml_rs/: README.md  pubspec.yaml
crates/libraries/ascii/src/: lib.rs
crates/libraries/lib-ascii/: Cargo.toml  README.md
crates/libraries/lib-cli/: Cargo.toml
crates/libraries/lib-core/: Cargo.toml
crates/libraries/lib-local-fs/: Cargo.toml
crates/libraries/lib-plant-uml/: Cargo.toml  README.md
crates/libraries/lib-plant-uml/src/: infrastructure.rs
docs/diagrams/plant_uml/: uml_rs_architectural_example.puml  uml_rs_architectural_layers.puml  uml_rs_components.puml  uml_rs_full_architectural_layout.puml
plant_uml_ascii_renderer_cli/: Cargo.toml
src/applications/cross-platform-client/: pubspec.yaml
src/applications/cross-platform-client/.dart_tool/: package_config.json  package_graph.json
src/applications/cross-platform-client/uml_rs/: pubspec.yaml
src/applications/desktop-client/: Cargo.toml
src/ascii/: Cargo.toml
src/ascii/src/: adapters.rs  lib.rs
src/ascii/src/adapters/: models.rs  presenters.rs
src/libraries/lib-ascii/src/: lib.rs
src/libraries/lib-plant-uml/: Cargo.toml
src/plant_uml/: Cargo.toml
src/plant_uml/src/: infrastructure.rs
(+76 files in other folders)
