[workspace]
members = [
  # Libraries
  "crates/libraries/lib-core",
  "crates/libraries/lib-plant-uml",
  "crates/libraries/lib-ascii",
  "crates/libraries/lib-cli",
  # Aplications
  "crates/applications/plant_uml_ascii_renderer_cli",
]
resolver = "3"

[workspace.dependencies]
pretty_assertions = "1.4.1"
