[workspace]
members = [
  # Libraries
  "crates/libraries/lib-core",
  "crates/libraries/lib-plant-uml",
  "crates/libraries/lib-ascii",
  "crates/libraries/lib-local-fs",
  # Aplications
  "crates/applications/desktop-client",
  "crates/applications/flutter/uml_rs/rust",
]
resolver = "3"

[workspace.dependencies]
pretty_assertions = "1.4.1"
