[workspace]
members = [
  # Libraries
  "src/libraries/lib-core",
  "src/libraries/lib-plant-uml",
  "src/libraries/lib-ascii",
  "src/libraries/lib-local-fs",
  # Aplications
  "src/applications/desktop-client",
  "src/applications/flutter/uml_rs/rust",
]
resolver = "3"

[workspace.dependencies]
pretty_assertions = "1.4.1"
